syntax = "proto3";

package api;
option go_package = "../api/";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service MovieService {

    rpc GetMovie(GetMovieRequest) returns (Movie) {
        option (google.api.http) = {
            get: "/movies/{id}"
        };
    }

    rpc ListMovies(ListMoviesRequest) returns (ListMoviesResponse) {
        option (google.api.http) = {
            get: "/movies"
        };
    }

    rpc CreateMovie(CreateMovieRequest) returns (Movie) {
        option (google.api.http) = {
            post: "/movies"
            body: "*"
        };
    }

    rpc UpdateMovie(UpdateMovieRequest) returns (Movie) {
        option (google.api.http) = {
            put: "/movies/{id}"
            body: "*"
        };
    }

    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {
        option (google.api.http) = {
            delete: "/movies/{id}"
        };
    }
}

message Movie {
    int32 id = 1;
    string title = 2 ; 
    int32 year = 3 ; 
    int32 runtime = 4 ;
    repeated string genres = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message GetMovieRequest {
    int32 id = 1;
}

message ListMoviesRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort_by = 3;
    string filter = 4;
}

message CreateMovieRequest {
    string title = 1;
    int32 year = 2;
    int32 runtime = 3;
    repeated string genres = 4;
}

message UpdateMovieRequest {
    int32 id = 1;
    string title = 2;
    int32 year = 3;
    int32 runtime = 4;
}

message DeleteMovieRequest {
    int32 id = 1;
}

message ListMoviesResponse {
    repeated Movie movies = 1;
}

message DeleteMovieResponse {
    string message = 1;
}